refactor: migrate from FFM to heap-based storage architecture
Major architectural refactoring from Foreign Function Memory (FFM) to 100% heap-based storage:

Storage Layer:
- Remove all FFM/MemorySegment-based storage (FfmTable, FfmColumn*)
- Add heap-based columnar storage (PageColumnInt, PageColumnLong, PageColumnString)
- Implement ByteBuddy table generation (TableGenerator, AbstractTable, GeneratedTable)
- Add ID indexes (LongIdIndex, StringIdIndex)

Type System:
- Convert TypeCodes from enum to final class with static byte constants
- Optimize for JIT inlining and tableswitch bytecode
- Update all type code comparisons throughout codebase

Query Execution:
- Replace RepositoryRuntime with HeapRuntimeKernel
- Zero-reflection hot path using TypeCode dispatch
- Direct column-indexed access via GeneratedTable interface

Documentation:
- Rewrite ARCHITECTURE.md to reflect heap-based architecture
- Update CLAUDE.md, DEVELOPMENT.md, QUERY.md, SPRING_DATA.md
- Remove all FFM/SIMD references
- Document custom annotations (not Jakarta/JPA)

Testing:
- Remove FFM-specific tests
- Add heap storage tests (TableGeneratorTest, PageColumn* tests)
- 148 tests passing (147 passed, 1 skipped)

BREAKING CHANGE: FFM storage API removed, use GeneratedTable interface instead